<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#cfcfcf">

        <android.support.v7.widget.Toolbar android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:titleTextColor="@color/colorWhite"
            xmlns:android="http://schemas.android.com/apk/res/android"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_stock"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#bf360c"
                android:elevation="4dp"
                android:radius="10dip"
                android:text="@string/stock"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"/>

            <Button
                android:id="@+id/btn_entradaSalida"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#01579b"
                android:elevation="4dp"
                android:radius="10dp"
                android:text="@string/entradas_salidas"
                android:textColor="@color/colorWhite"/>

            <Button
                android:id="@+id/btn_sync"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#004d40"
                android:elevation="4dp"
                android:text="@string/sync"
                android:textColor="@color/colorWhite"/>

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#a30000"
                android:elevation="4dp"
                android:radius="100dp"
                android:text="@string/cerrar_sesion"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>